--- a/carta.html
+++ b/carta.html
@@ -44,7 +44,7 @@
 
   <main class="container section">
     <div>
-      <h2>Carta Temporada 2025–2026</h2>
+      <h2>Carta 2026</h2>
       <p class="muted">Precios en CLP. Para reservas o consultas, escríbenos por WhatsApp.</p>
     </div>
 
@@ -61,19 +61,19 @@
         <h2>Entradas</h2>
         <div class="list">
           <div class="item"><div class="title">Ceviche de Salmón</div><div class="desc">(Cubos de salmón fresco marinados en limón, cilantro y cebolla morada)</div><div class="price">$ 15.500</div></div>
-          <div class="item"><div class="title">Tártaro de Filete res en tostadas de masa madre</div><div class="desc">(Filete de res picado a cuchillo con alcaparras y mostaza dijon sobre tostadas artesanales)</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Tártaro de Filete res en tostadas</div><div class="desc">(Filete de res picado a cuchillo con alcaparras y mostaza dijon sobre tostadas artesanales)</div><div class="price">$ 15.500</div></div>
           <div class="item"><div class="title">Tártaro de Betarraga con quinoa crocante</div><div class="desc">(Betarraga asada, aderezo cítrico y quinoa crocante)</div><div class="price">$ 14.500</div></div>
-          <div class="item"><div class="title">Crema de Zapallo con zanahoria y jengibre</div><div class="desc">(Suave crema de zapallo y zanahoria con toque de jengibre)</div><div class="price">$ 9.000</div></div>
-          <div class="item"><div class="title">Crema de Lentejas</div><div class="desc">(Crema casera de lentejas, reconfortante)</div><div class="price">$ 9.000</div></div>
+          <div class="item"><div class="title">Crema de Zapallo con zanahoria y jengibre</div><div class="desc">(Suave crema de zapallo y zanahoria con toque de jengibre)</div><div class="price">$ 8.000</div></div>
+          <div class="item"><div class="title">Crema de Lentejas</div><div class="desc">(Crema casera de lentejas, reconfortante)</div><div class="price">$ 8.000</div></div>
         </div>
       </div>
 
       <div class="card">
-        <h2>Fondos + Salsa</h2>
+        <h2>Fondos + Acompañamiento + Salsa</h2>
         <div class="list">
-          <div class="item"><div class="title">Medallón de Filete grillado, 220 grs</div><div class="desc">(Corte premium a la parrilla, a punto, con salsa a elección)</div><div class="price">$ 22.500</div></div>
-          <div class="item"><div class="title">Merluza Austral a la plancha, 230 grs</div><div class="desc">(Filete fresco a la plancha, piel crocante)</div><div class="price">$ 21.500</div></div>
-          <div class="item"><div class="title">Salmón a la plancha, 230 grs</div><div class="desc">(Salmón patagónico sellado a la plancha)</div><div class="price">$ 23.500</div></div>
+          <div class="item"><div class="title">Medallón de Filete grillado, 220-230 grs</div><div class="desc">(Corte premium a la parrilla, a punto, con salsa a elección)</div><div class="price">$ 22.500</div></div>
+          <div class="item"><div class="title">Merluza Austral a la plancha, 220-230 grs</div><div class="desc">(Filete fresco a la plancha, piel crocante)</div><div class="price">$ 21.500</div></div>
+          <div class="item"><div class="title">Salmón a la plancha, 220-230 grs</div><div class="desc">(Salmón patagónico sellado a la plancha)</div><div class="price">$ 23.500</div></div>
         </div>
 
         <hr class="sep" />
@@ -119,12 +119,12 @@
           </div>
           <div class="item">
             <div class="title">Ravioli de cordero en salsa de finas hierbas</div>
-            <div class="desc">(Masa artesanal al huevo teñida con calafate orgánico de Chile Chico)</div>
+            <div class="desc">(Masa artesanal al huevo teñida con betarragas orgánicas de Chile Chico)</div>
             <div class="price">$ 17.000</div>
           </div>
           <div class="item">
-            <div class="title">Sorrentino de espinaca en salsa pomodoro con morchellas</div>
-            <div class="desc">(Masa artesanal al huevo teñida con betarragas orgánicas de Chile Chico)</div>
+            <div class="title">Sorrentino de hojas verdes en salsa pomodoro con hongos y morchellas</div>
+            <div class="desc">(Masa artesanal al huevo rellena con hojas de beterraga y/o espinacas con salsa de tomate artesanal)</div>
             <div class="price">$ 17.000</div>
           </div>
           <div class="item">
@@ -134,6 +134,17 @@
           </div>
         </div>
       </div>
+
+      <div class="card">
+        <h2>Postres</h2>
+        <div class="list">
+          <div class="item"><div class="title">Brownie con toque de helado</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Crumble de manzana con helado de la casa</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Crema catalana</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Tiramisú</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Torta de la casa</div><div class="price">$ 7.000</div></div>
+        </div>
+      </div>
     </div>
 
     <hr class="sep" />
@@ -141,12 +152,12 @@
     <!-- BEBESTIBLES -->
     <div class="grid" data-animate-stagger>
       <div class="card">
-        <h2>Jugos y bebidas</h2>
+        <h2>Jugos, Bebidas y Café</h2>
         <div class="list">
-          <div class="item"><div class="title">Jugos UAPA! — Cereza / Pera / Manzana</div><div class="price">$ 4.500</div></div>
           <div class="item"><div class="title">Jugos SUR YUIS — Zarzaparrilla / Calafate / Grosella / Maqui</div><div class="price">$ 4.500</div></div>
           <div class="item"><div class="title">Jugo natural — Piña / Frambuesa / Limonada Menta Jengibre</div><div class="price">$ 4.500</div></div>
-          <div class="item"><div class="title">Gaseosas</div><div class="price">$ 3.500</div></div>
+          <div class="item"><div class="title">Gaseosas y Agua Embotellada</div><div class="price">$ 3.500</div></div>
+          <div class="item"><div class="title">Espresso, Cortado, Capuccino o Infusiones Naturales</div><div class="price">$ 3.500</div></div>
         </div>
       </div>
 
@@ -167,6 +178,7 @@
           <div class="item"><div class="title">Spritz — St. Germain, Ramazzotti, Aperol, Chambord</div><div class="price">$ 7.000</div></div>
           <div class="item"><div class="title">Espumante Brut</div><div class="price">$ 5.500</div></div>
           <div class="item"><div class="title">Jagermeister Manifest — vaso corporativo</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Disaronno, Licor Italiano de Almendras</div><div class="price">$ 4.500</div></div>
           <div class="item"><div class="title">Gin Kantal</div><div class="price">$ 5.000</div></div>
           <div class="item"><div class="title">Fentimans Rose o Ginger</div><div class="price">$ 4.000</div></div>
           <div class="item"><div class="title">Whisky Chivas 12 años</div><div class="price">$ 12.000</div></div>
@@ -185,19 +197,6 @@
       </div>
     </div>
 
-    <!-- POSTRES AL FINAL -->
-    <div class="section" style="padding-top:0;" data-animate>
-      <div class="card">
-        <h2>Postres</h2>
-        <div class="list">
-          <div class="item"><div class="title">Brownie con toque de helado</div><div class="price">$ 7.000</div></div>
-          <div class="item"><div class="title">Crumble de manzana con helado de la casa</div><div class="price">$ 7.000</div></div>
-          <div class="item"><div class="title">Crema catalana</div><div class="price">$ 7.000</div></div>
-          <div class="item"><div class="title">Tiramisú</div><div class="price">$ 7.000</div></div>
-          <div class="item"><div class="title">Torta de la casa</div><div class="price">$ 7.000</div></div>
-        </div>
-      </div>
-    </div>
   </main>
 
   <!-- FOOTER MEJORADO -->
