--- a/en/menu.html
+++ b/en/menu.html
@@ -44,7 +44,7 @@
 
   <main class="container section">
     <div>
-      <h2>2025–2026 Season Menu</h2>
+      <h2>2026 Menu</h2>
       <p class="muted">Prices in CLP. For bookings or questions, message us on WhatsApp.</p>
     </div>
 
@@ -61,19 +61,19 @@
         <h2>Starters</h2>
         <div class="list">
           <div class="item"><div class="title">Salmon ceviche</div><div class="desc">(Fresh salmon cubes marinated in lime, cilantro and red onion)</div><div class="price">$ 15.500</div></div>
-          <div class="item"><div class="title">Beef filet tartare on sourdough toasts</div><div class="desc">(Hand-chopped beef with capers and Dijon, served on artisan sourdough)</div><div class="price">$ 15.500</div></div>
+          <div class="item"><div class="title">Beef filet tartare on toasts</div><div class="desc">(Hand-chopped beef with capers and Dijon, served on artisan toasts)</div><div class="price">$ 15.500</div></div>
           <div class="item"><div class="title">Beet tartare with crispy quinoa</div><div class="desc">(Roasted beet tartare, citrus dressing and crunchy quinoa)</div><div class="price">$ 14.500</div></div>
-          <div class="item"><div class="title">Pumpkin cream soup with carrot and ginger</div><div class="desc">(Silky pumpkin and carrot soup with a hint of ginger)</div><div class="price">$ 9.000</div></div>
-          <div class="item"><div class="title">Lentil cream soup</div><div class="desc">(House-made creamy lentil soup)</div><div class="price">$ 9.000</div></div>
+          <div class="item"><div class="title">Pumpkin cream soup with carrot and ginger</div><div class="desc">(Silky pumpkin and carrot soup with a hint of ginger)</div><div class="price">$ 8.000</div></div>
+          <div class="item"><div class="title">Lentil cream soup</div><div class="desc">(House-made creamy lentil soup)</div><div class="price">$ 8.000</div></div>
         </div>
       </div>
 
       <div class="card">
-        <h2>Main dishes + Sauces</h2>
+        <h2>Main dishes + Sides + Sauces</h2>
         <div class="list">
-          <div class="item"><div class="title">Grilled filet medallion, 220 g</div><div class="desc">(Premium cut grilled to your liking, with sauce of choice)</div><div class="price">$ 22.500</div></div>
-          <div class="item"><div class="title">Pan-seared Southern hake, 230 g</div><div class="desc">(Fresh Southern hake with crispy skin)</div><div class="price">$ 21.500</div></div>
-          <div class="item"><div class="title">Pan-seared salmon, 230 g</div><div class="desc">(Patagonian salmon seared on the pan)</div><div class="price">$ 23.500</div></div>
+          <div class="item"><div class="title">Grilled filet medallion, 220-230 g</div><div class="desc">(Premium cut grilled to your liking, with sauce of choice)</div><div class="price">$ 22.500</div></div>
+          <div class="item"><div class="title">Pan-seared Southern hake, 220-230 g</div><div class="desc">(Fresh Southern hake with crispy skin)</div><div class="price">$ 21.500</div></div>
+          <div class="item"><div class="title">Pan-seared salmon, 220-230 g</div><div class="desc">(Patagonian salmon seared on the pan)</div><div class="price">$ 23.500</div></div>
         </div>
 
         <hr class="sep" />
@@ -119,12 +119,12 @@
           </div>
           <div class="item">
             <div class="title">Lamb ravioli in a fine herbs sauce</div>
-            <div class="desc">(Homemade egg pasta tinted with organic Chile Chico calafate berry)</div>
+            <div class="desc">(Homemade egg pasta tinted with organic Chile Chico beets)</div>
             <div class="price">$ 17.000</div>
           </div>
           <div class="item">
-            <div class="title">Spinach sorrentino in pomodoro sauce with morels</div>
-            <div class="desc">(Homemade egg pasta tinted with organic Chile Chico beets)</div>
+            <div class="title">Green leaves sorrentino in pomodoro sauce with mushrooms and morels</div>
+            <div class="desc">(Homemade egg pasta filled with beet and/or spinach leaves in artisan tomato sauce)</div>
             <div class="price">$ 17.000</div>
           </div>
           <div class="item">
@@ -134,6 +134,17 @@
           </div>
         </div>
       </div>
+
+      <div class="card">
+        <h2>Desserts</h2>
+        <div class="list">
+          <div class="item"><div class="title">Brownie with a touch of ice cream</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Apple crumble with house ice cream</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Crème brûlée</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">Tiramisu</div><div class="price">$ 7.000</div></div>
+          <div class="item"><div class="title">House cake</div><div class="price">$ 7.000</div></div>
+        </div>
+      </div>
     </div>
 
     <hr class="sep" />
@@ -141,12 +152,12 @@
     <!-- DRINKS -->
     <div class="grid" data-animate-stagger>
       <div class="card">
-        <h2>Juices & soft drinks</h2>
+        <h2>Juices, Drinks & Coffee</h2>
         <div class="list">
-          <div class="item"><div class="title">UAPA! juices — Cherry / Pear / Apple</div><div class="price">$ 4.500</div></div>
           <div class="item"><div class="title">SUR YUIS juices — Sarsaparilla / Calafate / Redcurrant / Maqui</div><div class="price">$ 4.500</div></div>
           <div class="item"><div class="title">Fresh juice — Pineapple / Raspberry / Mint & ginger lemonade</div><div class="price">$ 4.500</div></div>
-          <div class="item"><div class="title">Sodas</div><div class="price">$ 3.500</div></div>
+          <div class="item"><div class="title">Sodas and Bottled Water</div><div class="price">$ 3.500</div></div>
+          <div class="item"><div class="title">Espresso, Cortado, Cappuccino or Natural Infusions</div><div class="price">$ 3.500</div></div>
         </div>
       </div>
 
@@ -167,6 +178,7 @@
           <div class="item"><div class="title">Spritz — St. Germain, Ramazzotti, Aperol, Chambord</div><div class="price">$ 7.000</div></div>
           <div class="item"><div class="title">Brut sparkling wine</div><div class="price">$ 5.500</div></div>
           <div class="item"><div class="title">Jägermeister Manifest — corporate glass</div><div class="price">$ 4.500</div></div>
+          <div class="item"><div class="title">Disaronno, Italian Almond Liqueur</div><div class="price">$ 4.500</div></div>
           <div class="item"><div class="title">Gin Kantal</div><div class="price">$ 5.000</div></div>
           <div class="item"><div class="title">Fentimans Rose or Ginger</div><div class="price">$ 4.000</div></div>
           <div class="item"><div class="title">Chivas 12-year whisky</div><div class="price">$ 12.000</div></div>
@@ -185,18 +197,6 @@
       </div>
     </div>
 
-    <div class="section" style="padding-top:0;" data-animate>
-      <div class="card">
-        <h2>Desserts</h2>
-        <div class="list">
-          <div class="item"><div class="title">Brownie with a touch of ice cream</div><div class="price">$ 7.000</div></div>
-          <div class="item"><div class="title">Apple crumble with house ice cream</div><div class="price">$ 7.000</div></div>
-          <div class="item"><div class="title">Crème brûlée</div><div class="price">$ 7.000</div></div>
-          <div class="item"><div class="title">Tiramisu</div><div class="price">$ 7.000</div></div>
-          <div class="item"><div class="title">House cake</div><div class="price">$ 7.000</div></div>
-        </div>
-      </div>
-    </div>
   </main>
 
   <!-- ENHANCED FOOTER -->
