--- a/carta.html
+++ b/carta.html
@@ -94,7 +94,7 @@
           <span class="small">
             • Salsa blanca con queso azul<br/>
             • Salsa blanca con morchellas / morillas (champignon del Sur de Chile)<br/>
-            • Mantequilla de hierbas nativas
+            • Mantequilla de hierbas nativas (tomillo, orégano, eneldo y romero)
           </span>
         </div>
       </div>
