--- a/en/menu.html
+++ b/en/menu.html
@@ -94,7 +94,7 @@
           <span class="small">
             • White sauce with blue cheese<br/>
             • White sauce with morels (Southern Chile mushrooms)<br/>
-            • Native herb butter
+            • Native herb butter (thyme, oregano, dill and rosemary)
           </span>
         </div>
       </div>
