--- a/carta.html
+++ b/carta.html
@@ -206,7 +206,7 @@
         <div class="footer-section">
           <h4>Casona Belga</h4>
           <p class="small">
-            Hotel & Restaurante boutique en Chile Chico, Región de Aysén. Experiencia patagónica auténtica.
+            Hotel & Restaurante en Chile Chico, Región de Aysén. Experiencia patagónica auténtica.
           </p>
         </div>
 
@@ -242,12 +242,6 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
-
-  <div class="mobile-bar">
-    <div class="inner">
-      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Reservar</a>
-    </div>
-  </div>
 
   <script src="script.js" defer></script>
   <script src="chatbot.js" defer></script>
