--- a/en/contact.html
+++ b/en/contact.html
@@ -103,7 +103,7 @@
         <div class="footer-section">
           <h4>Casona Belga</h4>
           <p class="small">
-            Boutique hotel & restaurant in Chile Chico, Aysén Region. Authentic Patagonian experience.
+            Hotel & restaurant in Chile Chico, Aysén Region. Authentic Patagonian experience.
           </p>
         </div>
 
@@ -139,13 +139,6 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
-
-  <div class="mobile-bar">
-    <div class="inner">
-      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a>
-      <a class="btn" href="https://www.google.com/maps/place/Casona+Belga+Restaurante/data=!4m2!3m1!1s0x0:0x537620c01beb3f06?sa=X&ved=1t:2428&hl=en-GB&ictx=111" target="_blank" rel="noopener">Maps</a>
-    </div>
-  </div>
 
   <script src="../script.js" defer></script>
   <script src="../chatbot-en.js" defer></script>
