--- a/en/menu.html
+++ b/en/menu.html
@@ -206,7 +206,7 @@
         <div class="footer-section">
           <h4>Casona Belga</h4>
           <p class="small">
-            Boutique hotel & restaurant in Chile Chico, Aysén Region. Authentic Patagonian experience.
+            Hotel & restaurant in Chile Chico, Aysén Region. Authentic Patagonian experience.
           </p>
         </div>
 
@@ -242,13 +242,6 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
-
-  <div class="mobile-bar">
-    <div class="inner">
-      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">Book</a>
-      <a class="btn" href="rooms.html">Rooms</a>
-    </div>
-  </div>
 
   <script src="../script.js" defer></script>
   <script src="../chatbot-en.js" defer></script>
