--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="card">
           <div class="kv">
             <strong>Casona Belga: Gastronomía Consciente y Descanso Profundo</strong>
-            <span>Casona Belga es un punto de encuentro con la historia de Chile Chico, donde unimos gastronomía y descanso con un enfoque sostenible. En el restaurante cocinamos con ingredientes orgánicos, locales y de temporada, junto a pescadores artesanales y huerteros, integrando principios de la medicina Ayurveda. Destacan nuestros cócteles con frutas patagónicas. En el hotel priorizamos el descanso para la sana recuperación del cuerpo: colchones premium, sábanas de 1000 hilos, lámparas de sal y mucho más. Todo en un ambiente cálido, rústico y con atención personalizada.</span>
+            <span>Casona Belga es un punto de encuentro con la historia de Chile Chico, donde unimos gastronomía y descanso con un enfoque sostenible. En el restaurante cocinamos con ingredientes orgánicos, locales y de temporada. Tenemos alianzas con pescadores artesanales y huerteros, e integramos principios de la medicina Ayurveda en nuestras preparaciones. Destacan nuestros cócteles con frutas patagónicas. En el hotel priorizamos el descanso para la sana recuperación del cuerpo: colchones premium, almohadas hipoalergénicas, sábanas de 1000 hilos, lámparas de sal y mucho más. Todo en un ambiente cálido, rústico y con atención personalizada.</span>
           </div>
           <hr class="sep" />
           <div class="kv">
@@ -315,7 +315,7 @@
         <div class="footer-section">
           <h4>Casona Belga</h4>
           <p class="small">
-            Hotel & Restaurante boutique en Chile Chico, Región de Aysén. Experiencia patagónica auténtica.
+            Hotel & Restaurante en Chile Chico, Región de Aysén. Experiencia patagónica auténtica.
           </p>
         </div>
 
