--- a/en/en_index.html
+++ b/en/en_index.html
@@ -315,7 +315,7 @@
         <div class="footer-section">
           <h4>Casona Belga</h4>
           <p class="small">
-            Boutique hotel & restaurant in Chile Chico, Aysén Region. Authentic Patagonian experience.
+            Hotel & restaurant in Chile Chico, Aysén Region. Authentic Patagonian experience.
           </p>
         </div>
 
