Add AI-powered chatbot with Google Gemini integration

--- a/carta.html
+++ b/carta.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Carta 2025–2026 | Casona Belga</title>
-  <meta name="description" content="Carta Restaurante Casona Belga Temporada 2025–2026. Reserva por WhatsApp." />
+  <title>Carta 2026 | Casona Belga</title>
+  <meta name="description" content="Carta Restaurante Casona Belga 2026. Reserva por WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
   <link rel="stylesheet" href="style.css?v=3" />
@@ -25,7 +25,7 @@
           <img src="assets/logo_casona.png" alt="Logo Casona Belga" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
-            <span>Restaurante · Carta Temporada 2025–2026</span>
+            <span>Restaurante · Carta 2026</span>
           </div>
         </a>
       </div>
@@ -243,7 +243,8 @@
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
 
+  <script src="config.js"></script>
   <script src="script.js" defer></script>
-  <script src="chatbot.js" defer></script>
+  <script src="chatbot-ai.js" defer></script>
 </body>
 </html>
