--- a/en/menu.html
+++ b/en/menu.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Menu 2025–2026 | Casona Belga</title>
-  <meta name="description" content="Casona Belga Restaurant Menu 2025–2026 season. Book via WhatsApp." />
+  <title>Menu 2026 | Casona Belga</title>
+  <meta name="description" content="Casona Belga Restaurant Menu 2026. Book via WhatsApp." />
   <meta name="theme-color" content="#07070a" />
 
   <link rel="stylesheet" href="../style.css?v=3" />
@@ -25,7 +25,7 @@
           <img src="../assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
-            <span>Restaurant · 2025–2026 Season Menu</span>
+            <span>Restaurant · 2026 Menu</span>
           </div>
         </a>
       </div>
@@ -243,7 +243,8 @@
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
 
+  <script src="../config.js"></script>
   <script src="../script.js" defer></script>
-  <script src="../chatbot-en.js" defer></script>
+  <script src="../chatbot-ai-en.js" defer></script>
 </body>
 </html>
