--- a/en/rooms.html
+++ b/en/rooms.html
@@ -182,7 +182,8 @@
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
 
+  <script src="../config.js"></script>
   <script src="../script.js" defer></script>
-  <script src="../chatbot-en.js" defer></script>
+  <script src="../chatbot-ai-en.js" defer></script>
 </body>
 </html>
