--- a/habitaciones.html
+++ b/habitaciones.html
@@ -181,7 +181,8 @@
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
 
+  <script src="config.js"></script>
   <script src="script.js" defer></script>
-  <script src="chatbot.js" defer></script>
+  <script src="chatbot-ai.js" defer></script>
 </body>
 </html>
