--- a/index.html
+++ b/index.html
@@ -348,8 +348,9 @@
     </div>
   </footer>
 
+  <script src="config.js"></script>
   <script src="script.js" defer></script>
-  <script src="chatbot.js" defer></script>
+  <script src="chatbot-ai.js" defer></script>
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
