--- a/en/en_index.html
+++ b/en/en_index.html
@@ -348,8 +348,9 @@
     </div>
   </footer>
 
+  <script src="../config.js"></script>
   <script src="../script.js" defer></script>
-  <script src="../chatbot-en.js" defer></script>
+  <script src="../chatbot-ai-en.js" defer></script>
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
