--- a/en/rooms.html
+++ b/en/rooms.html
@@ -50,8 +50,9 @@
     </div>
 
     <div class="cta-row">
-      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Check availability</a>
-      <a class="btn" href="index.html">⬅ Back</a>
+      <a class="btn primary" href="bookings.html">🛏️ Book Online</a>
+      <a class="btn" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">💬 Ask on WhatsApp</a>
+      <a class="btn" href="en_index.html">⬅ Back</a>
     </div>
 
     <hr class="sep" />
