--- a/habitaciones.html
+++ b/habitaciones.html
@@ -49,7 +49,8 @@
     </div>
 
     <div class="cta-row">
-      <a class="btn primary" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">🛏️ Consultar disponibilidad</a>
+      <a class="btn primary" href="reservas.html">🛏️ Reservar Online</a>
+      <a class="btn" href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">💬 Consultar por WhatsApp</a>
       <a class="btn" href="index.html">⬅ Volver</a>
     </div>
 
