--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,8 @@
   <meta name="description" content="Contacto, ubicación, horarios y WhatsApp directo." />
   <meta name="theme-color" content="#07070a" />
 
-  <link rel="stylesheet" href="style.css?v=3" />
+  <link rel="stylesheet" href="style.css?v=5" />
+  <link rel="stylesheet" href="components.css?v=1" />
   <link rel="stylesheet" href="chatbot.css" />
   <link rel="icon" href="assets/logo_casona.png" type="image/png" />
 
@@ -94,6 +95,106 @@
         </div>
       </div>
     </div>
+
+    <!-- FORMULARIO DE CONTACTO -->
+    <section class="container section" data-animate>
+      <div class="container-narrow">
+        <div class="text-center mb-xl">
+          <h2>Envíanos un Mensaje</h2>
+          <p class="lead text-muted">
+            ¿Tienes alguna pregunta o solicitud especial? Completa el formulario y te responderemos pronto.
+          </p>
+        </div>
+
+        <div class="card" style="max-width: 720px; margin: 0 auto;">
+          <form id="contact-form">
+            <div class="form-group">
+              <label for="contact-name" class="form-label">Nombre Completo *</label>
+              <input
+                type="text"
+                id="contact-name"
+                name="name"
+                class="form-input"
+                placeholder="Juan Pérez"
+                required
+                minlength="2"
+              />
+              <div class="form-error">Por favor ingresa tu nombre completo</div>
+            </div>
+
+            <div class="form-row" style="display: grid; grid-template-columns: 1fr 1fr; gap: var(--space-md);">
+              <div class="form-group">
+                <label for="contact-email" class="form-label">Email *</label>
+                <input
+                  type="email"
+                  id="contact-email"
+                  name="email"
+                  class="form-input"
+                  placeholder="tu@email.com"
+                  required
+                />
+                <div class="form-error">Por favor ingresa un email válido</div>
+              </div>
+
+              <div class="form-group">
+                <label for="contact-phone" class="form-label">Teléfono</label>
+                <input
+                  type="tel"
+                  id="contact-phone"
+                  name="phone"
+                  class="form-input"
+                  placeholder="+56 9 1234 5678"
+                />
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="contact-subject" class="form-label">Asunto *</label>
+              <select id="contact-subject" name="subject" class="form-select" required>
+                <option value="">Selecciona un asunto...</option>
+                <option value="reservation">Reserva de Habitación</option>
+                <option value="restaurant">Reserva de Mesa</option>
+                <option value="inquiry">Consulta General</option>
+                <option value="event">Evento o Grupo</option>
+                <option value="feedback">Comentarios</option>
+                <option value="other">Otro</option>
+              </select>
+              <div class="form-error">Por favor selecciona un asunto</div>
+            </div>
+
+            <div class="form-group">
+              <label for="contact-message" class="form-label">Mensaje *</label>
+              <textarea
+                id="contact-message"
+                name="message"
+                class="form-textarea"
+                placeholder="Cuéntanos más sobre tu consulta o solicitud..."
+                required
+                minlength="10"
+              ></textarea>
+              <div class="form-error">Por favor escribe un mensaje (mínimo 10 caracteres)</div>
+            </div>
+
+            <div id="contact-alert" style="display: none;"></div>
+
+            <div style="display: flex; gap: var(--space-md); justify-content: flex-end; margin-top: var(--space-lg);">
+              <button type="button" class="btn" id="contact-reset">
+                Limpiar
+              </button>
+              <button type="submit" class="form-submit" id="contact-submit">
+                Enviar Mensaje
+              </button>
+            </div>
+
+            <p class="small text-muted" style="margin-top: var(--space-md); text-align: center;">
+              * Campos obligatorios. También puedes contactarnos directamente por
+              <a href="https://wa.me/message/TSCZUHZY7LTVJ1" target="_blank" rel="noopener">WhatsApp</a>
+              para una respuesta más rápida.
+            </p>
+          </form>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- FOOTER MEJORADO -->
@@ -143,5 +244,137 @@
   <script src="config.js"></script>
   <script src="script.js" defer></script>
   <script src="chatbot-ai.js" defer></script>
+
+  <script>
+    // Contact Form Handler
+    document.addEventListener('DOMContentLoaded', function() {
+      const form = document.getElementById('contact-form');
+      const submitBtn = document.getElementById('contact-submit');
+      const resetBtn = document.getElementById('contact-reset');
+      const alertDiv = document.getElementById('contact-alert');
+
+      // Real-time validation
+      const inputs = form.querySelectorAll('input[required], select[required], textarea[required]');
+
+      inputs.forEach(input => {
+        input.addEventListener('blur', function() {
+          validateField(this);
+        });
+
+        input.addEventListener('input', function() {
+          if (this.parentElement.classList.contains('has-error')) {
+            validateField(this);
+          }
+        });
+      });
+
+      function validateField(field) {
+        const group = field.closest('.form-group');
+
+        if (!field.checkValidity()) {
+          group.classList.add('has-error');
+          group.classList.remove('has-success');
+          return false;
+        } else {
+          group.classList.remove('has-error');
+          group.classList.add('has-success');
+          return true;
+        }
+      }
+
+      function showAlert(message, type = 'success') {
+        alertDiv.innerHTML = `<div class="alert alert--${type}">
+          <div class="alert-icon">${type === 'success' ? '✓' : type === 'error' ? '✕' : 'i'}</div>
+          <div class="alert-content">
+            <div class="alert-message">${message}</div>
+          </div>
+        </div>`;
+        alertDiv.style.display = 'block';
+        alertDiv.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+      }
+
+      // Form submission
+      form.addEventListener('submit', async function(e) {
+        e.preventDefault();
+
+        // Validate all fields
+        let isValid = true;
+        inputs.forEach(input => {
+          if (!validateField(input)) {
+            isValid = false;
+          }
+        });
+
+        if (!isValid) {
+          showAlert('Por favor corrige los errores en el formulario.', 'error');
+          return;
+        }
+
+        // Get form data
+        const formData = {
+          name: document.getElementById('contact-name').value,
+          email: document.getElementById('contact-email').value,
+          phone: document.getElementById('contact-phone').value,
+          subject: document.getElementById('contact-subject').value,
+          message: document.getElementById('contact-message').value,
+          timestamp: new Date().toISOString()
+        };
+
+        // Loading state
+        const originalText = submitBtn.textContent;
+        submitBtn.textContent = 'Enviando...';
+        submitBtn.disabled = true;
+        submitBtn.classList.add('is-loading');
+
+        try {
+          // In production, send to backend
+          // const response = await fetch('/api/contact', {
+          //   method: 'POST',
+          //   headers: { 'Content-Type': 'application/json' },
+          //   body: JSON.stringify(formData)
+          // });
+
+          // Simulate API call
+          await new Promise(resolve => setTimeout(resolve, 1500));
+
+          // Store locally for now
+          const submissions = JSON.parse(localStorage.getItem('contact_submissions') || '[]');
+          submissions.push(formData);
+          localStorage.setItem('contact_submissions', JSON.stringify(submissions));
+
+          // Success
+          showAlert('¡Mensaje enviado exitosamente! Te responderemos pronto por email.', 'success');
+
+          // Reset form
+          form.reset();
+          inputs.forEach(input => {
+            input.closest('.form-group').classList.remove('has-error', 'has-success');
+          });
+
+          // Scroll to top of form
+          form.scrollIntoView({ behavior: 'smooth', block: 'start' });
+
+        } catch (error) {
+          console.error('Error:', error);
+          showAlert('Hubo un error al enviar el mensaje. Por favor intenta nuevamente o contáctanos por WhatsApp.', 'error');
+        } finally {
+          submitBtn.textContent = originalText;
+          submitBtn.disabled = false;
+          submitBtn.classList.remove('is-loading');
+        }
+      });
+
+      // Reset button
+      resetBtn.addEventListener('click', function() {
+        if (confirm('¿Estás seguro de que quieres limpiar el formulario?')) {
+          form.reset();
+          alertDiv.style.display = 'none';
+          inputs.forEach(input => {
+            input.closest('.form-group').classList.remove('has-error', 'has-success');
+          });
+        }
+      });
+    });
+  </script>
 </body>
 </html>
